--- a/force-app/main/default/package.xml
+++ b/force-app/main/default/package.xml
@@ -2,7 +2,7 @@
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <fullName>Case Timer</fullName>
     <apiAccessLevel>Unrestricted</apiAccessLevel>
-    <namespacePrefix>sf_caseTimer</namespacePrefix>
+    <namespacePrefix></namespacePrefix>
     <types>
         <members>CaseTimeCount</members>
         <members>CaseTimeCountTest</members>
